- Fix completed button align  - Fix align for small and medium displays

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,11 @@ textarea {
     margin-bottom: 25px;
 }
 
+small > span,button {
+    white-space:nowrap;
+}
+
+
 @keyframes spin {
     from {
         transform: scale(1) rotate(0deg);
